# p-hash-benchmark-rs

./: .gitignore  Cargo.toml  README.md
examples/: actix.rs  roc.rs  sqlite-rayon.rs
src/: core.rs  db.rs  hash_image.rs  image_hash.rs  image_modify.rs  image_parse.rs  imagehash.rs  imagemodify.rs  img_hash.rs  img_mod.rs  img_proc.rs  lib.rs  macros.rs  main.rs  matching.rs  modify_image.rs  result_calc.rs
src/core/: app.rs  app_builder.rs  app_proc.rs  error.rs  image_parser.rs  images_processor.rs  result_parser.rs  state.rs
src/image_hash/: collection.rs  error.rs  hashing_methods.rs  interface.rs
src/image_modify/: collection.rs  error.rs  interface.rs  modifications.rs
src/image_parse/: interface.rs
src/matching/: error.rs  fetcher.rs  match_process.rs  processor.rs  result_parser.rs  state.rs
web/: hashing_methods.html  hashing_methods.js  images.html  images.js  index.css  index.html  index.js  run.html  run.js  utils.js
