[package]
name = "p-hash"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.13.0"
async-trait = "0.1.89"
bitvec = "1.0.1"
bytevec = "0.2.0"
chrono = "0.4.44"
crossbeam = "0.8.4"
enum-iterator = "2.3.0"
futures = "0.3.32"
hex = "0.4.3"
image = "0.23.14"
img_hash = "3.2.0"
indicatif = {version = "0.18.3", features=["rayon"]}
oneshot = {version = "0.2.1", features=["std"]}
plotters = "0.3.7"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite","macros"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.22", features = ["env-filter"]}
walkdir = "2.5.0"
